fix recipient column overlap

--- a/frontend/src/components/GoalCards/GoalTable.scss
+++ b/frontend/src/components/GoalCards/GoalTable.scss
@@ -62,3 +62,11 @@
 .goals-table .disabled {
   display: none;
 }
+
+.ttahub-goal-card__recipient-column {
+  min-width: 0;
+}
+
+.ttahub-goal-card__recipient-column p {
+  overflow-wrap: break-word;
+}
